# fire_sim_lib

./: .gitignore  CMakeLists.txt  README.md
data/: origin_fixed.fuel  temp_upload_onfire
include/: BD.cu  BD.h  Ember.h  FireSim.cpp  FireSim.h  FuelModel.h  FuelMoisture.h  IMT.cu  IMT.h  MT.cu  MT.h  SEQ.cpp  SEQ.h  fireSim_.cpp  fireSim_.h  kernel_BD.cu  kernel_BD.h  kernel_IMT.cu  kernel_IMT.h  kernel_MT.cu  kernel_MT.h  kernel_common.cu  kernel_common.h  propagation.cu  propagation.h  vector.h
src/: simulation.cu
